--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Details.xhtml
@@ -54,7 +54,7 @@
                                 </h:commandLink>
 
                                 <h:commandLink title="#{msgs.loeschen}"
-                                               action="#{ProzessverwaltungForm.VorlageLoeschen}"
+                                               action="#{ProzessverwaltungForm.deleteTemplate}"
                                                style="margin-right:20px">
                                     <h:graphicImage value="/pages/images/buttons/waste1a_20px.gif" alt="delete"/>
                                 </h:commandLink>
@@ -107,7 +107,7 @@
                     </td>
                     <td class="eingabeBoxen_row3" align="right">
                         <h:commandButton value="#{msgs.uebernehmen}" id="absenden"
-                                         action="#{ProzessverwaltungForm.VorlageUebernehmen}">
+                                         action="#{ProzessverwaltungForm.saveTemplate}">
                             <t:updateActionListener
                                     property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                         </h:commandButton>
