--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/werkstueck_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/werkstueck_box_Details.xhtml
@@ -43,7 +43,7 @@
                         <td rowspan="2" align="right">
 
                             <h:commandLink title="#{msgs.loeschen}"
-                                           action="#{ProzessverwaltungForm.WerkstueckLoeschen}" style="margin-right:20px">
+                                           action="#{ProzessverwaltungForm.deleteWorkpiece}" style="margin-right:20px">
                                 <h:graphicImage value="/pages/images/buttons/waste1a_20px.gif" alt="delete"/>
                             </h:commandLink>
 
