--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -36,7 +36,7 @@
                                      update="notifications"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
-                                     onclick="PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.userYouWillBeRedirected}','severity':'info'});"
+                                     onclick="PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                                      styleClass="button-filled-blue"/>
                 </p:panel>
                 <!-- main form -->
