--- a/Kitodo/src/main/webapp/pages/aktiveNutzer.xhtml
+++ b/Kitodo/src/main/webapp/pages/aktiveNutzer.xhtml
@@ -65,29 +65,23 @@
                                                     infoClass="text_blue" showDetail="true" showSummary="true"
                                                     tooltip="true"/>
 
-                                        <p:poll interval="10" update="serverzeit benutzerliste"/>
+                                        <p:poll interval="10" update="tableActiveSessions"/>
 
-                                        <h:panelGrid id="serverzeit" columns="2" style="font-size:11">
-                                            <h:outputText id="id7" value="#{msgs.aktiveBenutzer}:"/>
-                                            <h:outputText id="id8" value="#{SessionForm.aktiveSessions}"/>
-                                            <h:outputText id="id9" value="#{msgs.aktuelleZeit}:"/>
-                                            <h:outputText id="id10" value="#{SessionForm.aktuelleZeit}"/>
-                                        </h:panelGrid>
                                         <br/>
 
                                         <!-- Datentabelle -->
-                                        <p:dataTable id="benutzerliste"
+                                        <p:dataTable id="tableActiveSessions"
                                                      width="100%"
                                                      var="item" value="#{SessionForm.activeSessions}">
 
-                                            <p:column id="id11"
+                                            <p:column id="userName"
                                                       >
                                                 <f:facet name="header">
                                                     <h:outputText id="id12" value="#{msgs.benutzer}"/>
                                                 </f:facet>
                                                 <h:outputText id="id13" value="#{item.userName}"/>
                                             </p:column>
-                                            <p:column id="id17"
+                                            <p:column id="lastRequest"
                                                       >
                                                 <f:facet name="header">
                                                     <h:outputText id="id18" value="#{msgs.letzterZugriff}"/>
