--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -23,12 +23,15 @@
                 <h3>#{msgs.projekte}</h3>
                 <p:commandButton action="#{ProjekteForm.newProject}" value="#{msgs.newProject}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green"/>
             </p:panel>
-            <p:tabView>
-                <p:tab title="#{msgs.uebersicht}">
+            <p:tabView activeIndex="#{param.id}">
+                <p:tab title="#{msgs.projectList}">
                     <ui:include src="/WEB-INF/templates/includes/projects/projectList.xhtml"/>
                 </p:tab>
                 <p:tab title="#{msgs.prozessvorlagen}">
                     <ui:include src="/WEB-INF/templates/includes/projects/templateList.xhtml"/>
+                </p:tab>
+                <p:tab title="#{msgs.workflows}">
+                    <ui:include src="/WEB-INF/templates/includes/projects/workflowList.xhtml"/>
                 </p:tab>
                 <p:tab title="#{msgs.docket}">
                     <ui:include src="/WEB-INF/templates/includes/projects/docketList.xhtml"/>
