--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -59,8 +59,16 @@
 
                     <!-- color scheme -->
                     <h:outputLabel for="color-scheme" value="#{msgs.colorScheme}" />
-                    <p:selectOneMenu id="color-scheme" value="#{LoginForm.myBenutzer.css}">
+                    <p:selectOneMenu id="color-scheme" value="#{LoginForm.myBenutzer.css}" style="margin-bottom: 0">
                         <f:selectItems id="id19" value="#{HelperForm.cssFiles}"/>
+                    </p:selectOneMenu>
+
+                    <!-- language -->
+                    <h:outputLabel for="languages" value="#{msgs.languageUserInterface}" />
+                    <p:selectOneMenu id="languages" value="#{SpracheForm.locale}" style="margin-bottom: 0">
+                        <f:selectItems value="#{SpracheForm.supportedLocales}" var="entry"
+                                       itemLabel="#{entry['displayLanguageSelf']}"
+                                       itemValue="#{entry['id']}"/>
                     </p:selectOneMenu>
 
                     <!-- show process data in my tasks -->
