--- a/Kitodo/src/main/webapp/pages/MultiMassImportPage2.xhtml
+++ b/Kitodo/src/main/webapp/pages/MultiMassImportPage2.xhtml
@@ -76,7 +76,7 @@
                                                     <h:outputText id="idnp1" value="#{msgs.details}"/>
                                                 </td>
                                                 <td class="eingabeBoxen_row1" align="right">
-                                                    <h:commandLink id="idnp2" action="#{NavigationForm.Reload}">
+                                                    <h:commandLink id="idnp2" action="#{NavigationForm.reload}">
                                                         <h:graphicImage id="idnp4" value="/pages/images/reload.gif" alt="reload"/>
                                                     </h:commandLink>
                                                 </td>
