--- a/Kitodo/src/main/webapp/pages/ProjektFilegroupPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/ProjektFilegroupPopup.xhtml
@@ -48,7 +48,7 @@
                                         <h:outputText id="id2" value="#{msgs.details}"/>
                                     </td>
                                     <td class="eingabeBoxen_row1" align="right">
-                                        <h:commandLink id="id3" action="#{NavigationForm.Reload}">
+                                        <h:commandLink id="id3" action="#{NavigationForm.reload}">
                                             <h:graphicImage id="id4" value="/pages/images/reload.gif" alt="reload"/>
                                         </h:commandLink>
                                     </td>
