--- a/Kitodo/src/main/webapp/pages/incMeta/StrukturdatenOld.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/StrukturdatenOld.xhtml
@@ -419,7 +419,7 @@
 
         </h:panelGroup>
         <h:commandButton id="docStructReload" immediate="true"
-                         action="#{NavigationForm.Reload}" style="display:none">
+                         action="#{NavigationForm.reload}" style="display:none">
         </h:commandButton>
     </h:panelGroup>
 
