--- a/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
@@ -35,7 +35,7 @@
                                                 value="#{AktuelleSchritteForm.batchHelper.processNameList}"
                                                 itemLabel="#{process}" itemValue="#{process}"/>
                             </h:selectOneMenu>
-                            <h:commandButton action="#{NavigationForm.Reload}" value="#{msgs.reload}"/>
+                            <h:commandButton action="#{NavigationForm.reload}" value="#{msgs.reload}"/>
                         </td>
                     </tr>
                 </table>
