--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Action.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Action.xhtml
@@ -549,7 +549,7 @@
                                     <h:selectBooleanCheckbox id="check5"
                                                              value="#{ProzessverwaltungForm.anzeigeAnpassen['swappedOut']}"/>
                                 </h:panelGrid>
-                                <h:commandLink action="#{NavigationForm.Reload}" id="reloadcheck"
+                                <h:commandLink action="#{NavigationForm.reload}" id="reloadcheck"
                                                style="margin-left:44px"
                                                title="#{msgs.uebernehmen}">
                                     <h:outputText value="#{msgs.uebernehmen}"/>
