--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Properties.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Properties.xhtml
@@ -157,7 +157,7 @@
 
             <tr>
                 <td class="eingabeBoxen_row3" align="left">
-                    <h:commandButton value="#{msgs.abbrechen}" action="#{NavigationForm.Reload}" immediate="true">
+                    <h:commandButton value="#{msgs.abbrechen}" action="#{NavigationForm.reload}" immediate="true">
                         <t:updateActionListener property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                     </h:commandButton>
                 </td>
