--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
@@ -83,7 +83,7 @@
                                         <ui:include
                                         src="/pages/inc_Prozessverwaltung/schritt_box_Benutzergruppen.xhtml" />
 
-                                        <h:commandButton action="#{NavigationForm.Reload()}"
+                                        <h:commandButton action="#{NavigationForm.reload()}"
                                                          style="display:none"/>
                                     </td>
                                 </tr>
