--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
@@ -48,7 +48,7 @@
                                 <h:outputText value="#{ProzessverwaltungForm.task.localizedTitle}"/>
                             </td>
                             <td rowspan="2" align="right">
-                                <h:commandLink title="#{msgs.bearbeiten}" action="#{NavigationForm.Reload}"
+                                <h:commandLink title="#{msgs.bearbeiten}" action="#{NavigationForm.reload}"
                                                style=";margin-right:20px">
                                     <h:graphicImage value="/pages/images/buttons/edit_20.gif" alt="reload"/>
                                     <t:updateActionListener property="#{ProzessverwaltungForm.editMode}"
@@ -263,7 +263,7 @@
 
             <tr>
                 <td class="eingabeBoxen_row3" align="left">
-                    <h:commandButton value="#{msgs.abbrechen}" immediate="true" action="#{NavigationForm.Reload}">
+                    <h:commandButton value="#{msgs.abbrechen}" immediate="true" action="#{NavigationForm.reload}">
                         <t:updateActionListener property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                     </h:commandButton>
                 </td>
