--- a/Kitodo/src/main/webapp/pages/inc_editProjects/metsParameterTab.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_editProjects/metsParameterTab.xhtml
@@ -130,7 +130,7 @@
                                     width="700px"
                                     dynamic="true"
                                     modal="true"
-                                    onHide="#{NavigationForm.Reload()}">
+                                    onHide="#{NavigationForm.reload()}">
                                 <ui:include
                                         src="/pages/ProjektFilegroupPopup.xhtml"/>
                             </p:dialog>
@@ -164,7 +164,7 @@
                               header="#{msgs.filegroupHinzufuegen}"
                               height="270px" width="700px"
                               modal="true" dynamic="true"
-                              onHide="#{NavigationForm.Reload()}">
+                              onHide="#{NavigationForm.reload()}">
                         <ui:include
                                 src="/pages/ProjektFilegroupPopup.xhtml"/>
                     </p:dialog>
