--- a/Kitodo/src/main/webapp/pages/BenutzerBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzerBearbeiten.xhtml
@@ -81,7 +81,7 @@
                                                     <h:outputText id="id9" value="#{msgs.details}"/>
                                                 </td>
                                                 <td class="eingabeBoxen_row1" align="right">
-                                                    <h:commandLink id="id10" action="#{NavigationForm.Reload}">
+                                                    <h:commandLink id="id10" action="#{NavigationForm.reload}">
                                                         <h:graphicImage alt="reload" id="id11"
                                                                         value="/pages/images/reload.gif"/>
                                                     </h:commandLink>
@@ -224,7 +224,7 @@
                                                             <p:dialog widgetVar="addUserToUserGroupDialog" header="#{msgs.benutzergruppenHinzufuegen}"
                                                                       height="380px" width="430px"
                                                                       dynamic="true" modal="true"
-                                                                      onHide="#{NavigationForm.Reload()}">
+                                                                      onHide="#{NavigationForm.reload()}">
                                                                 <f:subview id="addUserToGroupSubView">
                                                                     <ui:include src="BenutzerBearbeitenPopup.xhtml"/>
                                                                 </f:subview>
@@ -257,7 +257,7 @@
                                                             <p:dialog widgetVar="addProjectDialog" header="#{msgs.projekte}"
                                                                       height="380px" width="430px"
                                                                       dynamic="true" modal="true"
-                                                                      onHide="#{NavigationForm.Reload()}">
+                                                                      onHide="#{NavigationForm.reload()}">
                                                                 <f:subview id="addUserToProjectSubView">
                                                                     <ui:include src="BenutzerBearbeitenPopupProjekte.xhtml"/>
                                                                 </f:subview>
