--- a/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
+++ b/Kitodo/src/main/webapp/pages/MassImportPage2.xhtml
@@ -75,7 +75,7 @@
                                                     <h:outputText id="idnp1" value="#{msgs.details}"/>
                                                 </td>
                                                 <td class="eingabeBoxen_row1" align="right">
-                                                    <h:commandLink id="idnp2" action="#{NavigationForm.Reload}">
+                                                    <h:commandLink id="idnp2" action="#{NavigationForm.reload}">
                                                         <h:graphicImage id="idnp4" alt="reload" value="/pages/images/reload.gif"/>
                                                     </h:commandLink>
                                                 </td>
