--- a/Kitodo/src/main/webapp/pages/ProjekteBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/ProjekteBearbeiten.xhtml
@@ -89,7 +89,7 @@
                                                     <h:outputText id="id9" value="#{msgs.details}"/>
                                                 </td>
                                                 <td class="eingabeBoxen_row1" align="right">
-                                                    <h:commandLink id="id10" action="#{NavigationForm.Reload}">
+                                                    <h:commandLink id="id10" action="#{NavigationForm.reload}">
                                                         <h:graphicImage id="id11" alt="reload"
                                                                         value="/pages/images/reload.gif"/>
                                                     </h:commandLink>
