--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Eigenschaften.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Eigenschaften.xhtml
@@ -122,7 +122,7 @@
             <tr>
                 <td class="eingabeBoxen_row3" align="left">
                     <h:commandButton value="#{msgs.abbrechen}"
-                                     action="#{NavigationForm.Reload}" immediate="true">
+                                     action="#{NavigationForm.reload}" immediate="true">
                         <t:updateActionListener
                                 property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                     </h:commandButton>
