--- a/Kitodo/src/main/webapp/pages/taskmanager.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskmanager.xhtml
@@ -70,7 +70,7 @@
                                                                rendered="#{LongRunningTasksForm.demoTasksLinkShowing}"
                                                                action="#{LongRunningTasksForm.addDemoTask}"/>
 
-                                                <h:commandLink id="id8" action="#{NavigationForm.Reload}"
+                                                <h:commandLink id="id8" action="#{NavigationForm.reload}"
                                                                style="margin-right:15px">
                                                     <h:graphicImage id="id9" alt="reload"
                                                                     value="/pages/images/icons/reload.png"
