Drop-Down buttons for creating new elements in both pages : projects.xhtml and processes.xhtml

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -22,7 +22,12 @@
         <p:panel id="listWrapper">
             <p:panel styleClass="content-header">
                 <h3>#{msgs.prozessverwaltung}</h3>
-                <p:button value="#{msgs.einenNeuenProzessAnlegen}" outcome="/pages/ProzessverwaltungBearbeiten" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green"/>
+                <h:form>
+                    <p:menuButton value="#{msgs.Create}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                        <p:menuitem value="#{msgs.neuenProzess}" outcome="/pages/ProzessverwaltungBearbeiten" icon="ui-icon-plusthick" />
+                        <p:menuitem value="#{msgs.neuenBatch}" icon="ui-icon-plusthick" />
+                    </p:menuButton>
+                </h:form>
                 <!-- filters -->
                 <h:form id="filterMenu">
                     <div class="ui-inputgroup">
