--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -21,7 +21,22 @@
         <p:panel id="listWrapper">
             <p:panel styleClass="content-header">
                 <h3>#{msgs.projekte}</h3>
-                <p:commandButton action="#{ProjekteForm.newProject}" value="#{msgs.newProject}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green"/>
+                <h:form>
+                    <p:menuButton value="#{msgs.Create}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                        <p:menuitem value="#{msgs.newProject}" action="#{ProjekteForm.newProject}" icon="ui-icon-plusthick" />
+                        <p:menuitem value="#{msgs.neueProzessvorlage}" action="#{ProzessverwaltungForm.newTemplate}"
+                                    immediate="true"
+                                    rendered="#{(LoginForm.maximaleBerechtigung == 1 || LoginForm.maximaleBerechtigung == 2)}"
+                                    icon="ui-icon-plusthick"/>
+                        <p:menuitem value="#{msgs.neuenLaufzettel}" action="#{DocketForm.newDocket}"
+                                    immediate="true"
+                                    rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
+                                    icon="ui-icon-plusthick"/>
+                        <p:menuitem value="#{msgs.neuenRegelsatz}" action="#{RulesetForm.createNewRuleset}"
+                                    rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
+                                    icon="ui-icon-plusthick"/>
+                    </p:menuButton>
+                </h:form>
             </p:panel>
             <p:tabView>
                 <p:tab title="#{msgs.uebersicht}">
